--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,7 +67,7 @@ en:
     desc4_1: Through our large network of distributor we are present on every continents and we are able to offer that printers in almost every country
     desc4_2: We believe we can only fully guarantee consistent product quality and the best customer service by offering them by our local representatives.
     desc4_3: Our existing distributors range is from small one-person companies to international corporations. By experience we found that not size but commitment, extensive local market knowledge and relevant contacts and competences are the key factors to success.
-    dec4_4: Our resellers are always there for you offering
+    desc4_4: Our resellers are always there for you offering
     desc4_5: Prompt, professional support in your time zone and language.
     desc4_6: Fast and cost-effective shipping.
     desc4_7: Reliable local warranty service.
