fxone card icons

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,7 +64,7 @@ en:
     title3: What are the Dimensions?
     desc3: It is  242mm by 178mm by 90mm or if you prefer 9.52 inches by 7 inches by 3.54 inches.
     title4: Where can I find official Foenix distributors?
-    desc4_1: Through our large network of distributor we are present on every continents and we are able to offer that printers in almost every country
+    desc4_1: Through our large network of distributors we are present on every continent and we are able to offer that printers in almost every country!
     desc4_2: We believe we can only fully guarantee consistent product quality and the best customer service by offering them by our local representatives.
     desc4_3: Our existing distributors range is from small one-person companies to international corporations. By experience we found that not size but commitment, extensive local market knowledge and relevant contacts and competences are the key factors to success.
     desc4_4: Our resellers are always there for you offering
